Fix alignment

--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -46,12 +46,15 @@
         .text {
             color: white;
             line-height: 30px;
-            text-align: center;
         }
 
         .email {
             color: white;
             text-decoration: none;
+        }
+
+        .copyright {
+            text-align: center;
         }
     }
 }
